--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "react": "~0.12.1"
+  "devDependencies": {
+    "react": "~0.13.1"
   }
 }
